--- a/01-cowsay/Dockerfile
+++ b/01-cowsay/Dockerfile
@@ -1,3 +1,3 @@
 FROM debian:buster
 RUN apt update && apt install -y cowsay fortune
-ENTRYPOINT ["/usr/games/cowsay"]
+CMD /usr/games/fortune | /usr/games/cowsay
